[package]
name = "gitbak"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ghbak"
path = "bin/ghbak.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
git2 = "0.14"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.18.2", features = ["rt-multi-thread", "macros"] }
url = "2.2.2"
zeroize = { version = "1.5.5", features = ["derive"] }
